# rules_k8s

./: .bazelignore  .gitignore  MODULE.bazel  go.mod
k8s/: extensions.bzl  k8s.bzl  object.bzl  repositories.bzl  with-defaults.bzl
k8s/go/pkg/resolver/: go.mod  go.sum
testing/bzlmod/: MODULE.bazel  README.md
testing/bzlmod/basic/: BUILD.bazel
testing/bzlmod/basic/test_configs/: basic_alpine.yaml  deployment.yaml  service.yaml
toolchains/kubectl/: extensions.bzl
