module(
    name = "rules_k8s",
    version = "0.0.0-v0.7",
    compatibility_level = 1,
    repo_name = "io_bazel_rules_k8s",
)

python_repositories = use_extension("@io_bazel_rules_k8s//k8s:extensions.bzl", "python_repositories")
use_repo(python_repositories, "com_github_yaml_pyyaml", "subpar")

kubectl_toolchain = use_extension("//toolchains/kubectl:extensions.bzl", "kubectl_toolchain")
kubectl_toolchain.configure(name = "k8s_config")
use_repo(kubectl_toolchain, "k8s_config")

register_toolchains(
    "@io_bazel_rules_k8s//toolchains/kubectl:kubectl_linux_amd64_toolchain",
    "@io_bazel_rules_k8s//toolchains/kubectl:kubectl_linux_arm64_toolchain",
    "@io_bazel_rules_k8s//toolchains/kubectl:kubectl_linux_s390x_toolchain",
    "@io_bazel_rules_k8s//toolchains/kubectl:kubectl_macos_x86_64_toolchain",
    "@io_bazel_rules_k8s//toolchains/kubectl:kubectl_macos_arm64_toolchain",
    "@io_bazel_rules_k8s//toolchains/kubectl:kubectl_windows_toolchain",
)

#####################################################################
# deps
#####################################################################

bazel_dep(name = "platforms", version = "0.0.6")
bazel_dep(name = "bazel_skylib", version = "1.4.1")

#####################################################################
# rules_docker
#####################################################################

bazel_dep(
    name = "rules_docker",
    version = "0.0.0-v0.25.0",
    repo_name = "io_bazel_rules_docker",
)

#####################################################################
# rules_go
#####################################################################

bazel_dep(name = "rules_go", version = "0.38.1", repo_name = "io_bazel_rules_go")
bazel_dep(name = "gazelle", version = "0.29.0", repo_name = "bazel_gazelle")

go_deps = use_extension("@bazel_gazelle//:extensions.bzl", "go_deps")
go_deps.module(
    path = "github.com/google/go-cmp",
    sum = "h1:BKbKCqvP6I+rmFHt06ZmyQtvB8xAkWdhFyr0ZUNZcxQ=",
    version = "v0.5.6",
)
use_repo(
    go_deps,
    # "com_github_ghodss_yaml",
    "com_github_google_go_cmp",
    "com_github_google_go_containerregistry",
    # "com_github_kylelemons_godebug",
    # "com_github_pkg_errors",
    "in_gopkg_yaml_v2",
)

#####################################################################
# Python
#####################################################################

bazel_dep(name = "rules_python", version = "0.24.0")

pip = use_extension("@rules_python//python/extensions:pip.bzl", "pip")
pip.parse(
    hub_name = "pip",
    requirements_lock = "//:requirements.txt",
)
use_repo(pip, "pip")
