# Copyright 2017 The Bazel Authors. All rights reserved.
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#    http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

load("@io_bazel_rules_docker//container:container.bzl", "container_image")
load("@io_bazel_rules_docker//contrib:test.bzl", "container_test")
load("@io_bazel_rules_k8s//k8s:objects.bzl", "k8s_objects")
load("@k8s_cluster_object//:defaults.bzl", "k8s_cluster_object")

container_image(
    name = "basic_python",
    base = "@python3_distroless//image",
    cmd = ["--version"],
)

# Tests
container_test(
    name = "basic_python_bazel_test",
    configs = ["//basic/test_configs:basic_alpine.yaml"],
    image = ":basic_python",
)

k8s_cluster_object(
    name = "k8s-basic-python-deployment",
    images = {
        "eu.gcr.io/zp-zoneprojects/rules_k8s_test:basic_python": ":basic_python",
    },
    kind = "deployment",
    template = "//basic/test_configs:deployment.yaml",
)

k8s_cluster_object(
    name = "k8s-basic-python-service",
    kind = "service",
    template = "//basic/test_configs:service.yaml",
)
